<resources>
    <string name="app_name">Weather App MVVM</string>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="made_in_india">Made in India</string>
    <string name="weather_update">Weather Update</string>
    <string name="mobile_no">Mobile Number *</string>
    <string name="full_name">Full Name *</string>
    <string name="gender">Gender *</string>
    <string name="dob">DOB *</string>
    <string name="age">Age *</string>
    <string name="address1">Address Line 1 *</string>
    <string name="address2">Address Line 2</string>
    <string name="pincCde">Pin Code *</string>
    <string name="check">Check</string>
    <string name="district">District :</string>
    <string name="state">State :</string>
    <string name="register">Register</string>
    <string name="weather_today">Weather Today</string>
    <string name="city_name">City Name</string>
    <string name="city_name2">City Name :</string>
    <string name="show_results">Show Results</string>
    <string name="temp_c">Temperature in Centigrade :</string>
    <string name="temp_f">Temperature in Fahrenheit :</string>
    <string name="latitude">Latitude :</string>
    <string name="longitude">Longitude :</string>
    <string name="weather">Weather :</string>
</resources>