<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.weatherappmvvm.viewmodel.RegisterViewModel" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.RegisterActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#1A7ED5">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:layout_toStartOf="@+id/toolbar_title"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/splash_icon_image" />

                <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="start"
                    android:fontFamily="@font/roboto_mono_medium"
                    android:text="@string/register"
                    android:textColor="@color/white"
                    android:textSize="26sp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/toolbar"
            android:layout_centerInParent="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ll_phone"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:boxStrokeErrorColor="@android:color/holo_red_dark"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:prefixText="+91"
                    app:prefixTextColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/mobile_no"
                        android:inputType="phone"
                        android:maxLength="10"
                        android:text="@={viewModel.inputNumber}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ll_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="25dp"
                    app:layout_constraintTop_toBottomOf="@+id/ll_phone">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/full_name"
                        android:inputType="text"
                        android:maxLength="50"
                        android:singleLine="true"
                        android:text="@={viewModel.inputName}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    app:layout_constraintTop_toBottomOf="@+id/ll_name">

                    <AutoCompleteTextView
                        android:id="@+id/gender_dropdown"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:hint="@string/gender"
                        android:inputType="none"
                        android:text="@={viewModel.inputGender}" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    android:weightSum="10"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
                    android:baselineAligned="false">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/ll_dob"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="6">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/date_picker"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableEnd="@drawable/ic_calender"
                            android:focusable="false"
                            android:hint="@string/dob"
                            android:inputType="none"
                            android:singleLine="true"
                            android:text="@={viewModel.inputDOB}" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/ll_age"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_gravity="end"
                        android:layout_weight="4">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_age"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:focusable="false"
                            android:hint="@string/age"
                            android:text="@={viewModel.inputAge}" />

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ll_address_1"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="25dp"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_address_line_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/address1"
                        android:inputType="text"
                        android:maxLength="50"
                        android:singleLine="true"
                        android:text="@={viewModel.inputAddress1}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ll_address_2"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    app:layout_constraintTop_toBottomOf="@+id/ll_address_1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_address_line_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/address2"
                        android:maxLength="50"
                        android:singleLine="true"
                        android:text="@={viewModel.inputAddress2}" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ll_pincode"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ll_address_2">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_pinCode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/pincCde"
                        android:inputType="number"
                        android:maxLength="6"
                        android:singleLine="true"
                        android:text="@={viewModel.inputPinCode}" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_pin_check"
                    android:layout_width="150dp"
                    android:layout_height="55dp"
                    android:backgroundTint="#DAD4D4"
                    android:text="@string/check"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@+id/ll_pincode"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/ll_pincode" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/district"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ll_pincode" />

                <TextView
                    android:id="@+id/tv_district"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@={viewModel.inputDistrict}"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView2"
                    app:layout_constraintStart_toEndOf="@+id/textView2"
                    app:layout_constraintTop_toTopOf="@+id/textView2" />


                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/state"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="@+id/textView2"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

                <TextView
                    android:id="@+id/tv_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@={viewModel.inputState}"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView3"
                    app:layout_constraintStart_toEndOf="@+id/textView3"
                    app:layout_constraintTop_toTopOf="@+id/textView3" />


                <Button
                    android:id="@+id/btn_register"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="30dp"
                    android:backgroundTint="#00ACC1"
                    android:text="@string/register"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_state" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </RelativeLayout>
</layout>